--- a/src/styles/scss/_country.scss
+++ b/src/styles/scss/_country.scss
@@ -21,6 +21,10 @@
             top: 0;
             left: 0;
         }
+
+        .countryTitles {
+            width: 90%;
+        }
     }
     
     .countryBody {
