--- a/src/styles/scss/_media.scss
+++ b/src/styles/scss/_media.scss
@@ -86,10 +86,11 @@
         }
         .caption {
             font-size: 0.5rem;
+            word-wrap: break-word;
         }
         
         .photoContainer{
-            width: 20vw;
+            width: 30vw;
             .photo {
                 height: 20vh;
                 width: 30vw
